add match y listado pocho

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 html,
 body {
-  color: white;
-  background-color: #21232a;
+  color: #21232a;
+  background-color: white;
   font-family: "Courier New", Courier, monospace;
   font-size: 1.3rem;
   margin: 0;
